United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7049410 JSR 292 old method name MethodHandle.invokeGeneric should not be accepted by the JVM
7049410 : JSR 292 old method name MethodHandle.invokeGeneric should not be accepted by the JVM

Details
Type:
Bug
Submit Date:
2011-05-28
Status:
Resolved
Updated Date:
2012-12-05
Project Name:
JDK
Resolved Date:
2011-06-04
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
hs21

Related Reports
Backport:

Sub Tasks

Description
The JVM currently links bytecodes which mention MH.invokeGeneric as if they had mentioned MH.invoke.  This is an error, which will be detected by a negative test that attempts to work with the method named MH.invokeGeneric.

The fix is simple: Change the default value of AllowInvokeGeneric to false.
Or, delete the flag altogether.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/c76d5f44a3fe
                                     
2011-06-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/c76d5f44a3fe
                                     
2011-06-04
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/a93146d0e4be
                                     
2011-06-03
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/a93146d0e4be
                                     
2011-06-02



Hardware and Software, Engineered to Work Together