7049410: JSR 292 old method name MethodHandle.invokeGeneric should not be accepted by the JVM

Change the default setting of the flag AllowInvokeGeneric to false

Reviewed-by: never